Fix dark mode color

--- a/src/App.scss
+++ b/src/App.scss
@@ -81,9 +81,9 @@
 
 	// Dark Theme
 	.theme_dark {
-		--lyds-color-text-heading-default-light: var(--lyds-color-base-neutral-300);
-		--lyds-color-text-body-default-light: var(--lyds-color-base-neutral-300);
-		--lyds-color-text-link-default-light: var(--lyds-color-base-neutral-300);
+		--lyds-color-text-heading-default-light: var(--lyds-color-base-neutral-200);
+		--lyds-color-text-body-default-light: var(--lyds-color-base-neutral-200);
+		--lyds-color-text-link-default-light: var(--lyds-color-base-neutral-200);
 		--lyds-color-text-heading-default: var(
 			--lyds-color-text-heading-default-light
 		);
